# hyperschema-c

./: .gitignore  .prettierignore  README.md  index.d.ts  index.js  package-lock.json  package.json  test.js
.github/workflows/: integrate.yml
lib/: codegen.js  errors.js
test/: c.js  codegen.js
test/c-workspace/: .gitignore  CMakeLists.txt  package.json
test/helpers/: c.js
